# cv-devcontainer-proj

./: .devcontainer.json  Dockerfile  README.md  docker-compose.yml  docker-compose_linux_cam.yml  requirements.txt  x_d_txt  x_u_txt
.github/: docker-compose.ci.yml
.github/workflows/: docker-image-ci.yml
_dl/: install_mvBlueFOX.sh
cam/mvImpactAquire/: installOptions  installOptions_Description  install_mvGenTL_Acquire.sh
cpp/: CMakeLists.txt  DisplayImage.cpp  _CMakeLists.txt  cppmodule.cpp  cppmodule.cu  cuda.cu  rebuild.sh
cpp/pybind11/: MANIFEST.in
cpp/pybind11/docs/: Makefile  changelog.rst
cpp/pybind11/include/pybind11/: cast.h  embed.h  numpy.h  stl.h  stl_bind.h
cpp/pybind11/include/pybind11/detail/: common.h  internals.h
cpp/pybind11/include/pybind11/eigen/: matrix.h  tensor.h
cpp/pybind11/pybind11/: __main__.py  _version.py  setup_helpers.py
cpp/pybind11/tests/: test_callbacks.py  test_exceptions.cpp  test_exceptions.py  test_pytypes.py
cpp/pybind11/tests/test_embed/: test_interpreter.cpp
python/: AR.py  BlitManager.py  cppTest.py  cvImshow.py  homography.py  homography_chess.py  homomorphic_filter.py  plt_events.py  pointInPoly_Prototyping.py  pyapp.py  ransac.py  requirements.txt  standard_solution_ransac.py  test.py  unitTests.py  video_test.py  webcam01.py  week01_sol_orthography_update.py  week04_ar_solution.py
python/referenceCode/: AR.py  camera_simulation.py  dynamic_image_example.py  ransac_ex.py  week02_camera_simulation.py  week04_ar_solution.py
python/tests/: cppTest.py  pygobjectTest.py  updateImage.py
python/utilities/: get_settings.py  settings.txt  template_webcam.m  template_webcam.py  webcam_control.py  webcam_snapshot.py
